# pico-ground

./: .gitignore  .gitmodules  README.txt  diagram.json  wokwi.toml
avrstup/: main-avr-dump.s  main-avr.s  main.c  main.s  main_dump.s  more-avr-dump.s  more.c
hello-asm/: CMakeLists.txt  hello.S  stdlib.txt
pico-bwp/: CMakeLists.txt  main.c
pico-scope/: CMakeLists.txt  main.c  tusb_config.h
picotools/: picotool  readme.txt
wozmon-app/: Makefile  echo.S  echo.elf  echo.hex  echo_dump.s  hex2wozmon.py  linker.ld  main.c  wozmon.txt
wozmon-rp2040/: CMakeLists.txt  main.c  memmap_no_flash.ld  wozmon-gemini.c  wozmon-gpt.c  wozmon.c  wozmon.h  wozmon_linker.ld
